--- a/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/Base.lproj/Main.storyboard
@@ -103,11 +103,17 @@
                                 <rect key="frame" x="164" y="318" width="46" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="AddItem:" destination="CXy-aO-ISA" eventType="touchUpInside" id="kPl-2H-g0M"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Pah-9t-9Uc"/>
                     </view>
+                    <connections>
+                        <outlet property="addTextField" destination="zaG-Ne-sKu" id="kHI-jd-ijL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mTv-1x-ds0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
